--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,24 @@ jobs:
       
     - name: Test
       run: dotnet test $SOLUTION --configuration $BUILD_CONFIG 
+
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    -
+      name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+      name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+          context: .
+          file: .DeployAPIProject/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/deployapiproject:v1, ${{ secrets.DOCKERHUB_USERNAME }}/deployapiproject:v${{ github.run_number }}
