--- a/DeployAPIProject/Dockerfile
+++ b/DeployAPIProject/Dockerfile
@@ -8,7 +8,7 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["./DeployAPIProject.csproj", ""]
+COPY ["./DeployAPIProject/DeployAPIProject.csproj", ""]
 RUN dotnet restore "./DeployAPIProject.csproj"
 COPY . .
 WORKDIR "/src/."
